# practice2026

./: .gitignore  README.md  mko-fakeDriver.md
pku/src/: CMakeLists.txt  README.md  build.sh  clean.sh
pku/src/api/: clean.sh  generate.sh  pku_driver.proto  pku_driver_test.proto  service_driver.proto  ui_service.proto
pku/src/configuration/: driver_address.json  pku_service_address.txt
pku/src/driver/: driver_stub.h  main.cpp  main_information.cpp  main_information.h  pku_driver_plug.cpp  pku_driver_plug.h  run.sh  service_driver_adapter.cpp  service_driver_adapter.h
pku/src/driver/grpc_pku_driver_cpp/: pku_driver.grpc.pb.cc  pku_driver.grpc.pb.h  pku_driver.pb.cc  pku_driver.pb.h
pku/src/integration_tests/: integration_tests.py
pku/src/protocol_buffers/: generate.sh  pku_service.proto
pku/src/service/: application.py  calling_pku_service.py  calling_pku_service_builder.py  connecting_driver_caller.py  connecting_driver_caller_connection_error.py  connecting_driver_caller_error.py  connecting_driver_caller_ping_error.py  connection_check_converter.py  connection_check_executor.py  grpc_pku_service.cpp  grpc_pku_service.h  json_address_loader.py  json_address_loader_error.py  json_address_loader_file_not_found_error.py  json_address_loader_is_a_directory_error.py  json_address_loader_parse_error.py  json_address_loader_permission_error.py  main.cpp  main.py  main_service_servicer_director.py  main_service_servicer_director_build_error.py  run.sh  run_tests.sh  service.proto  txt_address_loader.py  txt_address_loader_error.py  txt_address_loader_file_not_found_error.py  txt_address_loader_is_a_directory_error.py  txt_address_loader_parse_error.py  txt_address_loader_permission_error.py  ui_service_adapter.cpp  ui_service_adapter.h  validating_address_loader.py  validating_address_loader_error.py  validating_address_loader_ip_error.py  validating_address_loader_port_error.py
pku/src/service/application/: application.py  decorate_with_logger.py
pku/src/service/application/factory/: calling_pku_service_builder.py  main_service_servicer_builder.py  main_service_servicer_director.py
pku/src/service/calls/: connecting_driver_caller.py  driver_caller.py
pku/src/service/calls/errors/: connecting_driver_caller_connection_error.py  connecting_driver_caller_error.py  connecting_driver_caller_ping_error.py  driver_caller_error.py
pku/src/service/conversion/: converter.py  read_memory_response_to_command_response.py  read_pku_response_to_command_response.py  standard_response_to_command_response.py  str_to_read_pku_request.py  str_to_send_rk_by_index_request.py  str_to_set_pku_mode_request.py  str_to_write_main_info_request.py  version_info_to_command_response.py
pku/src/service/conversion/errors/: converter_error.py  read_memory_response_to_command_response_error.py  read_memory_response_to_command_response_index_error.py  str_to_read_pku_request_error.py  str_to_read_pku_request_index_error.py  str_to_read_pku_request_no_parameter_error.py  str_to_send_rk_by_index_request_duration_error.py  str_to_send_rk_by_index_request_error.py  str_to_send_rk_by_index_request_index_error.py  str_to_send_rk_by_index_request_no_parameter_error.py  str_to_set_pku_mode_request_error.py  str_to_set_pku_mode_request_index_error.py  str_to_set_pku_mode_request_mode_error.py  str_to_set_pku_mode_request_no_parameter_error.py  str_to_write_main_info_request_error.py  str_to_write_main_info_request_no_parameter_error.py
pku/src/service/errors/: error.py
pku/src/service/executors/: connection_check_executor.py  executor.py  hardware_status_executor.py  main_information_reading_executor.py  main_information_writing_executor.py  pku_mode_setting_executor.py  pku_reading_executor.py  rk_sending_executor.py  version_executor.py
pku/src/service/executors/errors/: connection_check_executor_call_error.py  connection_check_executor_conversion_error.py  connection_check_executor_error.py  executor_error.py  hardware_status_executor_call_error.py  hardware_status_executor_conversion_error.py  hardware_status_executor_error.py  main_information_reading_executor_call_error.py  main_information_reading_executor_conversion_error.py  main_information_reading_executor_error.py  main_information_writing_executor_call_error.py  main_information_writing_executor_conversion_error.py  main_information_writing_executor_error.py  pku_mode_setting_executor_call_error.py  pku_mode_setting_executor_conversion_error.py  pku_mode_setting_executor_error.py  pku_reading_executor_call_error.py  pku_reading_executor_conversion_error.py  pku_reading_executor_error.py  rk_sending_executor_call_error.py  rk_sending_executor_conversion_error.py  rk_sending_executor_error.py  version_executor_call_error.py  version_executor_conversion_error.py  version_executor_error.py
pku/src/service/factory/: creator.py  simple_creator.py  solution.py
pku/src/service/tests/: calling_pku_service_tests.py
pku/src/tests/: integration_tests.py  run_driver.sh  run_service.sh  run_tests.sh
pku/src/ui/: main.cpp  mainwindow.cpp  mainwindow.h
rs/: CMakeLists.txt  README.md
rs/api/: rs485_driver.proto  rs485_service.proto
rs/client/: rs485_driver_client.cpp  rs485_driver_client.h  rs485_gui_types.h  rs485_microservice_client.cpp  rs485_microservice_client.h  rs485_subscriber.cpp  rs485_subscriber.h
rs/common/: rs485_errors.cpp  rs485_errors.h  rs485_file_reader.cpp  rs485_file_reader.h  rs485_utils.cpp
rs/config/: config.cpp  config.yaml  rs485_config.h
rs/documentation/: instruction.tex  preambula.tex  report.tex
rs/driver/: rs485_driver.grpc.pb.cc  rs485_driver.grpc.pb.h  rs485_driver.pb.cc  rs485_driver.pb.h
rs/fake_driver/: fake_rs485_driver.cpp  fake_rs485_driver.h  main.cpp
rs/scripts/: build.sh  build_tests.sh  clean.sh  clean_tests.sh  generate_gui_proto.sh  run.sh  run_tests.sh
rs/service/: main.cpp  rs485_errors.cpp  rs485_errors.h  rs485_service.cpp  rs485_service.h  rs485_subscriber.cpp  rs485_subscriber.h  rs485_types.h  rs485_utils.cpp  rs485_utils.h
rs/test_client/: integration_tests.cpp  main.cpp
(+177 files in other folders)
